--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,21 @@ nav ul li {
     margin: 0 10px;
 }
 
-.contatos p {
-    margin: 5px 0;
+.hero-image {
+    background-image: url('condo.jpg');
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    padding: 100px 20px;
+}
+
+.hero-image h2 {
+    font-size: 2.5em;
+}
+
+.hero-image p {
+    font-size: 1.2em;
 }
 
 main {
@@ -58,3 +71,5 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
+img {
